[package]
name = "file-entropy-analyzer"
version = "1.0.0"
edition = "2021"
description = "A modern CLI tool to analyze file entropy for detecting encrypted, compressed, or packed files"
authors = ["Your Name"]
license = "MIT"
repository = "https://github.com/kkYrusobad/file-entropy-analyzer"
keywords = ["entropy", "security", "forensics", "file-analysis", "cli"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI argument parsing - we'll understand how this works under the hood
clap = { version = "4", features = ["derive"] }

# Progress bars for large files
indicatif = "0.17"

# Colored terminal output
colored = "2"

# Directory traversal
walkdir = "2"

[dev-dependencies]
# For testing
tempfile = "3"
